# systemc-clang

./: .gitignore  .gitmodules  .readthedocs.yml  .release-it.json  .travis.yml  APIntUtils_8h.html  APIntUtils_8h__dep__incl.map  APIntUtils_8h__dep__incl.md5  APIntUtils_8h__incl.map  APIntUtils_8h__incl.md5  APIntUtils_8h_source.html  ArrayTypeUtils_8cpp.html  ArrayTypeUtils_8cpp__incl.map  ArrayTypeUtils_8cpp__incl.md5  ArrayTypeUtils_8cpp_source.html  ArrayTypeUtils_8h.html  ArrayTypeUtils_8h__dep__incl.map  ArrayTypeUtils_8h__dep__incl.md5  ArrayTypeUtils_8h__incl.map  ArrayTypeUtils_8h__incl.md5  ArrayTypeUtils_8h_source.html  Automata_8cpp.html  Automata_8cpp__incl.map  Automata_8cpp__incl.md5  Automata_8cpp_source.html  Automata_8h.html  Automata_8h__dep__incl.map  Automata_8h__dep__incl.md5  Automata_8h__incl.map  Automata_8h__incl.md5  Automata_8h_source.html  CMakeLists.txt  CMakeLists.txt.systemc-clang  CXXRecordDeclUtils_8cpp.html  CXXRecordDeclUtils_8cpp__incl.map  CXXRecordDeclUtils_8cpp__incl.md5  CXXRecordDeclUtils_8cpp_source.html  CXXRecordDeclUtils_8h.html  CXXRecordDeclUtils_8h__dep__incl.map  CXXRecordDeclUtils_8h__dep__incl.md5  (+1708 more)
hardware/: CMakeLists.txt  README.md  Targets.cmake  common.tcl.config
hardware/app/: CMakeLists.txt  MCDMA.py  test_hash_mcdma.py  test_z3.py  test_z5.py  utils.py
hardware/bd/: CMakeLists.txt  README.md  bd_device.tcl  bd_pynqz1.tcl  bd_ultra96v2.tcl  bd_ultra96v2_20211.tcl  bd_ultra96v2_20221.tcl  generate_bd_dcp.tcl
hardware/constr/: pynqz1.xdc  ultra96v2.xdc  ultra96v2_20211.xdc  ultra96v2_20221.xdc
hardware/driver/: .gitignore
hardware/ip/: CMakeLists.txt  axi_bram_blank.tcl  axis_dwidth_256_32.tcl  axis_dwidth_32_136.tcl  axis_dwidth_32_256.tcl  axis_dwidth_32_32.tcl  axis_dwidth_32_64.tcl  axis_dwidth_64_32.tcl  axis_interconnect_1_2.tcl  gen_sim.tcl
hardware/rtl/: CMakeLists.txt  VivadoSynthesis.cmake  add.sv  add_synth_test.sv  bitstream.tcl  bitstream_conf.tcl  hash_unit_hdl.txt.sv  hashwrapper.sv  implementation.tcl  implementation_conf.tcl  post_check.tcl  synthesis.tcl  synthesis_static.tcl  top.sv  top_mcdma.sv  utilization.tcl  z3test_hdl.txt.sv  z3wrapper.sv  z3wrapper_32.sv  z7wrapper.sv  z7wrapper_32.sv
hardware/verif/: CMakeLists.txt  VivadoSimulation.cmake  bds.tcl  blank.f  files.tcl  run_behavioral.tcl  run_impl.tcl  run_synthesis.tcl  zynq_blank.f  zynq_hash.f  zynq_z3.f
src/: '  Automata.cpp  Automata.h  CMakeLists.txt  ClassDataMembers.cpp  ClassDataMembers.h  ClassMemberFunctions.cpp  ClassMemberFunctions.h  DependencyGraph.cpp  DependencyGraph.h  DumpCFG.cpp  DumpCFG.h  EntryFunctionContainer.cpp  EntryFunctionContainer.h  EntryFunctionType.h  EntryFunctionType.h.del  EntryFunctions.cpp  EntryFunctions.h  EventContainer.cpp  EventContainer.h  EventDecl.cpp  EventDecl.h  FindArgument.cpp  FindArgument.h  FindClassDataMembers.cpp  FindClassDataMembers.h  FindConstructor.cpp  FindConstructor.h  FindDataHazards.h  FindEntryFunctions.cpp  FindEntryFunctions.h  FindEvents.cpp  FindEvents.h  FindGlobalEvents.cpp  FindGlobalEvents.h  FindGlobalVariables.cpp  FindGlobalVariables.h  FindInitiatorTarget.cpp  FindInitiatorTarget.h  FindLoopTime.cpp  (+131 more)
src/SCuitable/: Automata.cpp  FindGPUMacro.cpp  FindGPUMacro.h  GlobalSuspensionAutomata.cpp  GlobalSuspensionAutomata.h  SuspensionAutomata.cpp  SuspensionAutomata.h  TimeAnalysis.h
src/cfg/: CMakeLists.txt  SplitCFG.cpp  SplitCFG.h  SplitCFGBlock.cpp  SplitCFGBlock.h
src/matchers/: CMakeLists.txt  FindArgument.cpp  FindArgument.h  FindConstructor.cpp  FindConstructor.h  FindEntryFunctions.cpp  FindEntryFunctions.h  FindEvents.cpp  FindEvents.h  FindGlobalEvents.cpp  FindGlobalEvents.h  FindMemberFieldMatcher.h  FindModule.cpp  FindModule.h  FindModuleInstance.cpp  FindModuleInstance.h  FindNetlist.cpp  FindNetlist.h  FindNotify.cpp  FindNotify.h  FindPorts.h  FindSCMain.cpp  FindSCMain.h  FindSCModules.h  FindSensitivity.cpp  FindSensitivity.h  FindSimTime.cpp  FindSimTime.h  FindTLMInterfaces.cpp  FindTLMInterfaces.h  FindTemplateParameters.cpp  FindTemplateParameters.h  FindTemplateTypes.cpp  FindTemplateTypes.h  FindWait.cpp  FindWait.h  InstanceMatcher.h  Matchers.h  NetlistMatcher.h  PortMatcher.h  (+2 more)
src/model/: CMakeLists.txt  EntryFunctionContainer.cpp  EntryFunctionContainer.h  EventContainer.cpp  EventContainer.h  EventDecl.cpp  EventDecl.h  InterfaceDecl.cpp  InterfaceDecl.h  Model.cpp  Model.h  ModuleDecl.cpp  ModuleDecl.h  ModuleInstance.cpp  ModuleInstance.h  ModuleInstanceType.h  NotifyCalls.cpp  NotifyCalls.h  NotifyContainer.cpp  NotifyContainer.h  PortBinding.h  PortDecl.cpp  PortDecl.h  ProcessDecl.cpp  ProcessDecl.h  Signal.cpp  SignalContainer.cpp  SignalContainer.h  SignalDecl.cpp  SignalDecl.h  WaitCalls.cpp  WaitCalls.h  WaitContainer.cpp  WaitContainer.h
src/utils/: APIntUtils.h  ArrayTypeUtils.cpp  ArrayTypeUtils.h  CMakeLists.txt  CXXRecordDeclUtils.cpp  CXXRecordDeclUtils.h  CallExprUtils.cpp  CallExprUtils.h
tests/: CMakeLists.txt  ClangArgs.h.in  Makefile.systemc  basic-module-method-inherit.cpp  basic-module-method.cpp  build-ast-code.cpp  catch-test.cpp  catch-test2.cpp  clock-parsing.cpp  find-clk-edge.cpp  find-members.cpp  find-var-decl.cpp  hotfix-40-findtemplatetypes.cpp  hotfix-40.cpp  import-ast-test.cpp  instance-matcher.cpp  main.cpp  member-variable-sc-buffer.cpp  method-as-member-variable-workaround.cpp  method-as-member-variable.cpp  model.test.cpp  module2.hpp  netlist-matcher.cpp  next-trigger.cpp  no-loop-thread.cpp  portarray-example.cpp  runTest.sh  sc-clang-test.cpp  simple_forloop_test.cpp  sreg-test.cpp  subtree-matcher-test.cpp  t000-basic-module.cpp  t1.cpp  t2.cpp  t3.cpp  t4-matchers.cpp  t5-template-matching.cpp  template-method.cpp  test-xor-hierarchy.cpp  test1.cpp  (+6 more)
tests/AT/: at_interconnect.h
tests/S2CBench_v1.0/: README.txt
tests/asic-world/: first_counter.cpp
tests/at_example/: at_typea_initiator.h  at_typed_target.h  at_typee_target.h  common_header.h
tests/cfg/: CMakeLists.txt  cfg-for-break-wait.cpp  cfg-for-if-wait.cpp  cfg-for-stmt-wait.cpp  run-cfg-rework-test.cpp  (+8 more)
(+3044 files in other folders)
